| Summary: | ASTERISK-27550: [patch] bridge_softmix: Avoid warning about an uninitialized variable. | ||||
| Reporter: | Alexander Traud (traud) | Labels: | patch | ||
| Date Opened: | 2018-01-05 06:00:08.000-0600 | Date Closed: | 2018-01-08 06:19:45.000-0600 | ||
| Priority: | Major | Regression? | |||
| Status: | Closed/Complete | Components: | Bridges/bridge_softmix | ||
| Versions: | 15.1.5 | Frequency of Occurrence | |||
| Related Issues: |
| ||||
| Environment: | Attachments: | ( 0) clang_bridge_softmix.patch | |||
| Description: | The compiler _clang_ 5.0.1 reports:
{code}bridge_softmix.c:1407:56: warning: variable 'bridge_channel' is uninitialized when used here [-Wuninitialized] check_binaural_position_change(bridge, softmix_data, bridge_channel); ^~~~~~~~~~~~~~ bridge_softmix.c:1367:44: note: initialize the variable 'bridge_channel' to silence this warning struct ast_bridge_channel *bridge_channel; ^ = NULL{code} | ||||
| Comments: | By: Friendly Automation (friendly-automation) 2018-01-08 06:19:46.176-0600 Change 7821 merged by Jenkins2: bridge_softmix: Removed unused parameter from check_binaural_position_change(.). [https://gerrit.asterisk.org/7821|https://gerrit.asterisk.org/7821] By: Friendly Automation (friendly-automation) 2018-01-08 06:39:24.289-0600 Change 7819 merged by Jenkins2: bridge_softmix: Removed unused parameter from check_binaural_position_change(.). [https://gerrit.asterisk.org/7819|https://gerrit.asterisk.org/7819] | ||||