bridge_softmix: Removed unused parameter from check_binaural_position_change(.).

Found as a result of the function being passed an uninitalized variable by
clang.

ASTERISK-27550

Change-Id: I8af3bd84656b685a956d498459f8db3613f68954